--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <div class="card">
     <div class="search">
     <input type="text" class="search-bar" placeholder="search">
-   <button type="submit" style="height: 25px; width: 60px;">Search</button>
+   <button type="submit">Search</button>
     </div>
 
     <div class="weather loading">
-    <h2 class="sity">Weather in Belgrade</h2>
+    <h2 class="city">Weather in Belgrade</h2>
     <h1 class="temp">39C</h1>
    <div class="description">Cloudly</div>
     <div class="humidity">Humidity: 50%</div>
